# scaruffi_tidal

./: .gitignore  INSTALLATION.md  PHASE1_README.md  PHASE2_README.md  PHASE2_SUMMARY.md  PHASE3_README.md  PHASE3_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  cli.py  phase2_demo.py  pyproject.toml  requirements.txt  scaruffi_tidal.py  setup.cfg
application/: auth.py  orchestrator.py  quality_ranker.py
domain/: auth.py  canonical.py  discogs.py  recording.py  scaruffi_entry.py  tidal.py
infrastructure/: cache_manager.py  config.py  discogs_client.py  rate_limiter.py  scaruffi_parser.py  tidal_client.py
tests/application/: test_quality_ranker.py
tests/domain/: test_canonical.py
tests/infrastructure/: test_config.py  test_discogs_client.py  test_rate_limiter.py  test_scaruffi_parser.py
