[metadata]
name = scaruffi-tidal
version = 1.0.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4>=4.12.0
    lxml>=5.0.0
    pyyaml>=6.0
    discogs-client>=2.3.0
    tidalapi>=0.7.0

[options.packages.find]
where = .
include = domain*, application*, infrastructure*, scaruffi_tidal*
